src/snapshots/yaml_subset__tests__inline_hash.snap
---
source: src/lib.rs
expression: parsed
---
Ok(
    Document {
        leading_comments: [],
        items: [
            Yaml(
                Hash(
                    [
                        Element(
                            HashElement {
                                key: "field",
                                value: AliasedYaml {
                                    alias: Some(
                                        "test",
                                    ),
                                    value: InlineHash(
                                        [],
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "item",
                                value: AliasedYaml {
                                    alias: None,
                                    value: InlineHash(
                                        [],
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "item2",
                                value: AliasedYaml {
                                    alias: None,
                                    value: InlineHash(
                                        [
                                            (
                                                "key",
                                                DoubleQuotedString(
                                                    [
                                                        String(
                                                            "value",
                                                        ),
                                                    ],
                                                ),
                                            ),
                                            (
                                                "other",
                                                InlineArray(
                                                    [
                                                        UnquotedString(
                                                            "a",
                                                        ),
                                                        UnquotedString(
                                                            "b",
                                                        ),
                                                    ],
                                                ),
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "other",
                                value: AliasedYaml {
                                    alias: None,
                                    value: Hash(
                                        [
                                            Comment(
                                                " check",
                                            ),
                                            Element(
                                                HashElement {
                                                    key: "combine",
                                                    value: AliasedYaml {
                                                        alias: None,
                                                        value: InlineHash(
                                                            [
                                                                (
                                                                    "key",
                                                                    InlineHash(
                                                                        [
                                                                            (
                                                                                "key",
                                                                                InlineArray(
                                                                                    [
                                                                                        UnquotedString(
                                                                                            "l",
                                                                                        ),
                                                                                        InlineHash(
                                                                                            [
                                                                                                (
                                                                                                    "a",
                                                                                                    DoubleQuotedString(
                                                                                                        [
                                                                                                            String(
                                                                                                                "b",
                                                                                                            ),
                                                                                                        ],
                                                                                                    ),
                                                                                                ),
                                                                                            ],
                                                                                        ),
                                                                                    ],
                                                                                ),
                                                                            ),
                                                                        ],
                                                                    ),
                                                                ),
                                                            ],
                                                        ),
                                                    },
                                                },
                                            ),
                                            Element(
                                                HashElement {
                                                    key: "item",
                                                    value: AliasedYaml {
                                                        alias: None,
                                                        value: InlineHash(
                                                            [],
                                                        ),
                                                    },
                                                },
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                    ],
                ),
            ),
        ],
    },
)
