src/snapshots/yaml_subset__tests__neg_number_in_list-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
---
vset_range:
  - -10
  - 10
vset_range_points: 20
